# c-library-project

./: CMakeLists.txt  README.md  libreriaFileData.c  libreriaFileData.h  libreriaGenerazioneRandom.c  libreriaGenerazioneRandom.h  libreriaInserimentoControllo.c  libreriaInserimentoControllo.h  libreriaMacroComuni.c  libreriaMacroComuni.h  libreriaStampa.c  libreriaStampa.h  main.c
.github/workflows/: c-cpp.yml
